--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,18 @@
   # Variables de entorno
   NODE_VERSION = "18"
 
+# Configuración de redirects para SPA
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+# Configuración de redirects para SPA
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 # Configuración de headers para mejorar seguridad y rendimiento
 [[headers]]
   for = "/*"
@@ -20,8 +32,10 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
     
-    # Cache para assets estáticos
-    Cache-Control = "public, max-age=31536000, immutable"
+    # CORS para Firebase
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
 
 # Headers específicos para HTML
 [[headers]]
@@ -29,23 +43,8 @@
   [headers.values]
     Cache-Control = "public, max-age=3600"
 
-# Headers específicos para archivos de video
+# Headers específicos para archivos estáticos
 [[headers]]
-  for = "/assets/video/*"
+  for = "/assets/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-# Configuración para SPA (Single Page Application)
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  conditions = {Role = ["admin"]}
-
-# Headers para Firebase y CORS
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+    Cache-Control = "public, max-age=31536000, immutable"
